# CEFNEN_Online

./: .gitignore  README.md  agregar_datos.py  analisis_estadistico_descriptivo.py  calibrate.py  calibration_root.py  crear_nueva_campagna.py  crear_nueva_campagna_old.py  edit_materials.py  fetch_config_files.py  fetch_dlt_files.py  fetch_root_files.py  generar_archivo_calibracion.py  incident_report.py  logbook.py  lookuptable_setup.py  main.py  main_old.py  monitoreo_archivos_remotos.py  noise_analysis.py  plot_comparison.py  plot_cr_evo.py  plot_meteorological_data.py  plot_root_histograms.py  recalibrate.py  recalibrate_root.py  reporte_fin_de_campagna.py  reporte_fin_de_campagna_old.py  rsync_thread.py  send_config_files_to_remote.py  send_offline_config_files.py  style.py  template.tex  utils.py
Offline/: CMakeLists.txt  Komparators.cpp  Komparators.h  MyDefinition.h  NewSpec.cpp  NewSpec.h  OfflineAnalysisBRIKEN.cpp  OfflineAnalysisBRIKEN.cxx  OfflineAnalysisBRIKEN.h  OfflineTreeLinkDef.h  Signal.cpp  Signal.h
antiguos/: calibrate.py  noise_analysis.py  recalibrate.py
calibration/: 200828_Campagna_FONDO_neutrones_EFIR_Samples_test.numbers  200828_Campagna_FONDO_neutrones_EFIR_Samples_test.xlsx  OfflineConf_Signals_SalarMaricunga.csv
calibration/ConfigFiles2024/: 240507_3316-250_conf.xlsx  240610_3316_250_ConfigFile.xlsx  240610_3316_250_ConfigFile_BUENA.xlsx  240610_3316_250_ConfigFile_BUENA_clockExt.xlsx  240610_3316_250_ConfigFile_edit.xlsx  240611_3316_250_ConfigFile_4det.xlsx  240612_3316_250_ConfigFile_4det_cal.xlsx  240612_3316_250_ConfigFile_4det_cal_cr_1min-2.xlsx  (+8 more)
data/: -CountingRate.csv  Casatest-CountingRate.csv  PruebaCasa-CountingRate.csv  PruebaLinux-CountingRate.csv  Prueba_125MSPS_4det-CountingRate.csv  Pupelde-CountingRate.csv  Rancagua-CountingRate.csv  Rgua2-CountingRate.csv  SIS3316_125_IntClk_125_16det_MPR16_medida_fuente_AmBe-CountingRate.csv  SIS3316_125_IntClk_125_4det_fondo-CountingRate.csv  SIS3316_125_IntClock_125_16det_Fondo-CountingRate.csv  SIS3316_125_IntClock_125_16det_fuenteAmBe-CountingRate.csv  SIS3316_125_IntClock_125_16det_fuenteAmBe_recalibrate-CountingRate.csv  SIS3316_125_IntClock_125_16det_fuenteGamma-CountingRate.csv  SIS3316_125_IntClock_125_16det_fuenteGamma_recalibrate-CountingRate.csv  SIS3316_125_IntClock_62_16det_Calibration-CountingRate.csv  SIS3316_125_IntClock_62_16det_fuenteAmBe-CountingRate.csv  SIS3316_125_IntClock_62_16det_fuenteGamma-CountingRate.csv  SIS3316_125_IntClock_62_16det_fuenteGamma_AmBe-CountingRate.csv  SanPedroAtacama-CountingRate.csv  SanPedro_2024-CountingRate.csv  Test4det-CountingRate.csv  Test4det-CountingRate_old.csv  Test4det-CountingRate_viejuno.csv  UCN-Antofagasta-CountingRate.csv  UCN_Antofa_2-CountingRate.csv  UCN_Antofa_2024-CountingRate.csv  info_campaigns.csv  info_campaigns_backup.csv  materiales.csv  variables_locales_1m_SanPedro_2024.csv  variables_locales_1m_UCN_Antofa_2.csv
rootonline/: BinOptimization.root  Distribucion_1inch.root  test.root
(+327 files in other folders)
